feat(classifications): fix 'show' path, docs
